--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,9 @@
                 </ul>
             </aside>
 
-            <h2 id="research">Research Experience</h2>
+            <div class="scroll-anchor" id="research">
+            <h2 >Research Experience</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-flask"></i></div>
@@ -58,7 +60,9 @@
             </div>
             </div>
 
-            <h2 id="teaching">Teaching Experience</h2>
+            <div class="scroll-anchor" id="teaching">
+            <h2 >Teaching Experience</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
@@ -69,7 +73,9 @@
             </div>
             </div>
 
-            <h2 id="service">Service and Leadership</h2>
+            <div class="scroll-anchor" id="service">
+            <h2 >Service and Leadership</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-hands-helping"></i></div>
@@ -89,7 +95,9 @@
             </div>
             </div>
 
-            <h2 id="awards">Grants and Awards</h2>
+            <div class="scroll-anchor" id="awards">
+            <h2 >Grants and Awards</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-award"></i></div>
@@ -105,7 +113,9 @@
             </div>
             </div>
 
-            <h2 id="associations">Professional Associations</h2>
+            <div class="scroll-anchor" id="associations">
+            <h2 >Professional Associations</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-users"></i></div>
@@ -118,7 +128,9 @@
             </div>
             </div>
 
-            <h2 id="industry">Industry Experience</h2>
+            <div class="scroll-anchor" id="industry">
+            <h2 >Industry Experience</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-industry"></i></div>
@@ -138,7 +150,9 @@
             </div>
             </div>
 
-            <h2 id="skills">Technical Skills</h2>
+            <div class="scroll-anchor" id="skills">
+            <h2 >Technical Skills</h2>
+            </div>
             <div class="timeline">
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-tools"></i></div>
