--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,9 @@
     </nav>
 
     <section class="pdf-viewer">
+        <p style="text-align:center; margin-top: 1rem;">
+          <a href="publications.pdf" target="_blank">Open full PDF in a new tab</a>
+        </p>
         <iframe src="publications.pdf" frameborder="0"></iframe>
     </section>
 
