--- a/publications.html
+++ b/publications.html
@@ -23,12 +23,15 @@
         </div>
     </nav>
 
-    <section class="pdf-viewer">
-        <p style="text-align:center; margin-top: 1rem;">
+    <div class="container">
+      <section class="pdf-viewer">
+        <p style="text-align:center; margin-top: 4rem;">
           <a href="publications.pdf" target="_blank">Open full PDF in a new tab</a>
         </p>
         <iframe src="publications.pdf" frameborder="0"></iframe>
-    </section>
+      </section>
+    </div>
+    
 
 
   <footer>
