--- a/experience.html
+++ b/experience.html
@@ -25,6 +25,7 @@
 
     <aside class="floating-nav">
         <ul>
+        <li><a href="#education">Education</a></li>
         <li><a href="#research">Research</a></li>
         <li><a href="#teaching">Teaching</a></li>
         <li><a href="#service">Service</a></li>
@@ -36,24 +37,57 @@
     </aside>
     <div class="container">
         <section class="section">
-            <div class="scroll-anchor" id="research">
-            <h2 >Research Experience</h2>
+            <div class="scroll-anchor" id="education">
+                <h2 >Education</h2>
             </div>
             <div class="timeline">
+                <div class="timeline-entry">
+                    <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
+                    <div class="timeline-content">
+                        <h3>Ph.D., Mechanical Engineering</h3>
+                        <span>University of Rochester, Rochester, NY, USA (2017–2023)</span>
+                        <p><strong>Thesis:</strong> Scale Analysis of Wind Work on the Oceanic General Circulation<br>
+                            <strong>Advisor:</strong> Dr. Hussein Aluie
+                        </p>
+                    </ul>
+                </div>
+            </div>
             <div class="timeline-entry">
-                <div class="timeline-icon"><i class="fas fa-flask"></i></div>
+                <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                 <div class="timeline-content">
-                <h3>Postdoctoral Investigator</h3>
-                <span>Woods Hole Oceanographic Institution (2023–Present)</span>
-                <p>Research on multiscale air-sea interactions using regional coupled models and satellite/in-situ data. Developed diagnostics for fluxes and eddy-wind coupling.</p>
+                    <h3>Bachelors' Degree in Mechanical Engineering</h3>
+                    <span>Tribhuvan University, Kirtipur, Nepal</span>
+                </div>
+            </div>
+            </div>
+            <div class="scroll-anchor" id="research">
+                <h2 >Research Experience</h2>
+            </div>
+            <div class="timeline">
+                <div class="timeline-entry">
+                    <div class="timeline-icon"><i class="fas fa-flask"></i></div>
+                    <div class="timeline-content">
+                        <h3>Postdoctoral Investigator</h3>
+                        <span>Woods Hole Oceanographic Institution (2023–Present)</span>
+                        <ul>
+                            <li> Investigating multiscale air-sea interaction dynamics in the Tropical Pacific 
+                                using coupled regional models (ROMS-WRF SCOAR).</li>
+                            <li> Using machine learning frameworks to reconcile discrepancies between satellite 
+                                and in-situ wind measurements (QuikSCAT, ASCAT, TAO arrays).</li>
+                        </ul>
                 </div>
             </div>
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-university"></i></div>
                 <div class="timeline-content">
-                <h3>Graduate Research Assistant</h3>
-                <span>Los Alamos National Laboratory (Summers 2018, 2019)</span>
-                <p>Studied mesoscale wind forcing effects using QuikSCAT and CESM/POP2; implemented wind forcing schemes in MOM6.</p>
+                    <h3>Graduate Research Assistant</h3>
+                    <span>Los Alamos National Laboratory (Summers 2018, 2019)</span>
+                    <ul>
+                        <li>Investigated the spatial scales of ocean surface wind forcing on mesoscale ocean dynamics 
+                            using QuikSCAT observations and CESM/POP2 outputs.</li>
+                        <li>Modified and implemented analytical wind forcing and relative wind stress parameterizations 
+                            in MOM6 for multiscale analysis of air-sea momentum fluxes.</li>
+                    </ul>  
                 </div>
             </div>
             </div>
@@ -65,8 +99,16 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                 <div class="timeline-content">
-                <p><strong>MIT-WHOI (2024):</strong> TA – Fluid Dynamics of the Atmosphere and Ocean</p>
-                <p><strong>University of Rochester:</strong> TA – Turbulence (2022), Thermodynamics (2018), Solid Mechanics Lab (2017)</p>
+                <p><strong>MIT-WHOI:</strong></p>
+                    <ul>
+                        <li>Graduate Course TA – Fluid Dynamics of the Atmosphere and Ocean (Fall 2024)</li>
+                    </ul>
+                <p><strong>University of Rochester:</strong></p>
+                    <ul>
+                        <li>Graduate Course TA – Turbulence (Fall 2022)</li>
+                        <li>Undergraduate Course TA – Thermodynamics (Spring 2018)</li>
+                        <li>Undergraduate Course TA – Solid Mechanics Lab (Fall 2017)</li>
+                    </ul>  
                 </div>
             </div>
             </div>
@@ -78,15 +120,15 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-hands-helping"></i></div>
                 <div class="timeline-content">
-                <p><strong>Reviewer:</strong> 
+                <p><strong>Reviewer:</strong></p> 
                     <ul><li>Journal of Geophysical Research: Oceans</li>
                         <li>Journal of Physical Oceanography</li>
                     </ul>
-                <p><strong>Convener:</strong>
+                <p><strong>Convener:</strong></p>
                     <ul><li>AGU Session AOS012 (2024),</li>
                         <li>Moderator at SWOT Workshop (2022)</li>
                     </ul>
-                <p><strong>Leadership:</strong> 
+                <p><strong>Leadership:</strong></p>
                     <ul><li>Early Career Member at Large, <br> Executive Committee, APS Topical Group on Physics of Climate (2025–26)</li>
                     </ul>
                 </div>
@@ -135,15 +177,22 @@
                 <div class="timeline-content">
                 <h3>CFD Engineer</h3>
                 <span>Chiyoda Corporation, Japan (Feb 2017 – Jul 2017)</span>
-                <p>Performed CFD simulations for natural gas plant equipment; applied HPC and parallel computing.</p>
+                <ul>
+                    <li> Performed CFD simulations for parts and machinery used in natural gas plants. </li>
+                    <li> Created 3D CAD geometry from 2D engineering drawings and created mesh for CFD</li>
+                </ul>
                 </div>
             </div>
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-microchip"></i></div>
                 <div class="timeline-content">
                 <h3>CAD/CAE Engineer</h3>
-                <span>E & T Co., Japan / Nepal (Nov 2014 – Feb 2017)</span>
-                <p>Developed and validated an in-house CFD solver core. Simulated automobile parts using CUDA and C++.</p>
+                <span>E & T Co., Japan / E & T Nepal Pvt. Ltd.  (Nov 2014 – Feb 2017)</span>
+                <ul>
+                    <li> Performed CFD simulations for automobile parts. </li>
+                    <li> Led the development and validation of the dynamic core in an in-house CFD solver. </li>
+                    <li> Used C++ with CUDA for solver development </li>
+                </ul>
                 </div>
             </div>
             </div>
