--- a/experience.html
+++ b/experience.html
@@ -44,6 +44,7 @@
                 <div class="timeline-entry">
                     <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                     <div class="timeline-content">
+                        <p> Sep 2017 – Aug 2023</p>
                         <h3>Ph.D., Mechanical Engineering</h3>
                         <span>University of Rochester, Rochester, NY, USA (2017–2023)</span>
                         <p><strong>Thesis:</strong> Scale Analysis of Wind Work on the Oceanic General Circulation<br>
@@ -55,6 +56,7 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                 <div class="timeline-content">
+                    <p> Oct 2010 – Feb 2015</p>
                     <h3>Bachelors' Degree in Mechanical Engineering</h3>
                     <span>Tribhuvan University, Kirtipur, Nepal</span>
                 </div>
@@ -67,8 +69,9 @@
                 <div class="timeline-entry">
                     <div class="timeline-icon"><i class="fas fa-flask"></i></div>
                     <div class="timeline-content">
+                        <p> July 2023 – Present</p>
                         <h3>Postdoctoral Investigator</h3>
-                        <span>Woods Hole Oceanographic Institution (2023–Present)</span>
+                        <span>Woods Hole Oceanographic Institution </span>
                         <ul>
                             <li> Investigating multiscale air-sea interaction dynamics in the Tropical Pacific 
                                 using coupled regional models (ROMS-WRF SCOAR).</li>
@@ -80,8 +83,9 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-university"></i></div>
                 <div class="timeline-content">
+                    <p>Summers 2018, 2019</p>
                     <h3>Graduate Research Assistant</h3>
-                    <span>Los Alamos National Laboratory (Summers 2018, 2019)</span>
+                    <span>Los Alamos National Laboratory</span>
                     <ul>
                         <li>Investigated the spatial scales of ocean surface wind forcing on mesoscale ocean dynamics 
                             using QuikSCAT observations and CESM/POP2 outputs.</li>
@@ -175,8 +179,9 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-industry"></i></div>
                 <div class="timeline-content">
+                <p>Feb 2017 – Jul 2017</p>
                 <h3>CFD Engineer</h3>
-                <span>Chiyoda Corporation, Japan (Feb 2017 – Jul 2017)</span>
+                <span>Chiyoda Corporation, Japan</span>
                 <ul>
                     <li> Performed CFD simulations for parts and machinery used in natural gas plants. </li>
                     <li> Created 3D CAD geometry from 2D engineering drawings and created mesh for CFD</li>
@@ -186,8 +191,9 @@
             <div class="timeline-entry">
                 <div class="timeline-icon"><i class="fas fa-microchip"></i></div>
                 <div class="timeline-content">
+                <p>Nov 2014 – Feb 2017</p>
                 <h3>CAD/CAE Engineer</h3>
-                <span>E & T Co., Japan / E & T Nepal Pvt. Ltd.  (Nov 2014 – Feb 2017)</span>
+                <span>E & T Co., Japan / E & T Nepal Pvt. Ltd.</span>
                 <ul>
                     <li> Performed CFD simulations for automobile parts. </li>
                     <li> Led the development and validation of the dynamic core in an in-house CFD solver. </li>
@@ -206,10 +212,10 @@
                 <div class="timeline-content">
                 <ul class="skills-list">
                     <li><strong>Programming:</strong> Python, FORTRAN, C, C++, MATLAB</li>
-                    <li><strong>HPC:</strong> MPI, OpenMP, mpi4py</li>
-                    <li><strong>Modeling:</strong> ROMS, WRF, MOM6, CESM</li>
-                    <li><strong>CFD Tools:</strong> ANSYS Fluent, CFX, ICEM CFD</li>
-                    <li><strong>CAD:</strong> CATIA, SolidWorks, AutoCAD</li>
+                    <li><strong>High Performance Computing:</strong> MPI, OpenMP, mpi4py, dask</li>
+                    <li><strong>Earth System Numerical Modeling:</strong> ROMS, WRF, MOM6, CESM</li>
+                    <li><strong>Computational Fluid Dynamics:</strong> ANSYS Fluent, CFX, ICEM CFD</li>
+                    <li><strong>Computer Aided Drawing:</strong> CATIA, SolidWorks, AutoCAD</li>
                 </ul>
                 </div>
             </div>
