--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,42 @@
     </nav>
 
     <div class="container">
+      <section>
+        <div class="highlighted-publications">
+        <h2>Highlighted Publications</h2>
+
+        <div class="pub-entry">
+          <span class="pub-year">2025</span>
+          <img class="pub-thumb" src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs41467-025-56310-1/MediaObjects/41467_2025_56310_Fig2_HTML.png?as=webp" 
+           alt="Figure 1" class="pub-thumb">
+          <!-- <img  src="https://www.nature.com/" alt="Nature Comms Cover"> -->
+          <div class="pub-details">
+            <p><strong>Shikhar Rai</strong>, J. T. Farrar, H. Aluie.
+            <a href="https://doi.org/10.1038/s41467-025-56310-1" target="_blank"><h3>Atmospheric wind energization of ocean weather</h3>
+            </a>
+            <span class="pub-journal">Nature Communications</span>, 16(1), 1172. 
+            <a href="https://doi.org/10.1038/s41467-025-56310-1" target="_blank">[DOI: 10.1038/s41467-025-56310-1]</a>
+            </p>
+          </div>
+        </div>
+
+
+        <div class="pub-entry">
+          <span class="pub-year">2021</span>
+          <img class="pub-thumb" src="https://www.science.org/cms/10.1126/sciadv.abf4920/asset/f02e2f95-ec75-4d0e-a6e8-2245dc7bd3da/assets/graphic/abf4920-f1.jpeg" 
+           alt="Figure 2" class="pub-thumb">
+          <!-- <img  src="https://www.nature.com/" alt="Nature Comms Cover"> -->
+          <div class="pub-details">
+            <p><strong>Shikhar Rai</strong>, M. Hecht, M. Maltrud, H. Aluie.
+            <a href="https://doi.org/10.1126/sciadv.abf4920" target="_blank"><h3>Scale of oceanic eddy killing by wind from global satellite observations</h3></a>
+            <span class="pub-journal">Science Advances</span>, 7(28), eabf4920. 
+            <a href="https://doi.org/10.1126/sciadv.abf4920" target="_blank">[DOI: 10.1126/sciadv.abf4920]</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      </section>
       <section class="pdf-viewer">
         <p style="text-align:center; margin-top: 4rem;">
           <a href="publications.pdf" target="_blank">Open full PDF in a new tab</a>
