--- a/publications.html
+++ b/publications.html
@@ -59,12 +59,13 @@
         </div>
       </div>
 
-      </section>
-      <section class="pdf-viewer">
-        <p style="text-align:center; margin-top: 4rem;">
+  
+      <div class="pdf-viewer">
+        <p style="text-align:center; margin-top: 1rem;">
           <a href="publications.pdf" target="_blank">Open full PDF in a new tab</a>
         </p>
         <iframe src="publications.pdf" frameborder="0"></iframe>
+      </div>
       </section>
     </div>
     
