--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,7 @@
         </div>
       </div>
 
+      <h2>All Publications List</h2>
   
       <div class="pdf-viewer">
         <p style="text-align:center; margin-top: 1rem;">
