--- a/publications.html
+++ b/publications.html
@@ -59,9 +59,10 @@
         </div>
       </div>
 
-      <h2>All Publications List</h2>
+      
   
       <div class="pdf-viewer">
+        <h2 style="text-align:center; margin-top: 1rem;">All Publications List</h2>
         <p style="text-align:center; margin-top: 1rem;">
           <a href="publications.pdf" target="_blank">Open full PDF in a new tab</a>
         </p>
