--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
                     <div class="social-icons">
                         <a href="mailto:shikhar.rai@whoi.edu" title="Email"><i class="fas fa-envelope"></i></a>
-                        <a href="https://github.com/yourgithub"><i class="fab fa-github"></i></a>
-                        <a href="https://linkedin.com/in/yourlinkedin"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://scholar.google.com/citations?user=XXXXX"><i class="ai ai-google-scholar"></i></a>
-                        <a href="https://orcid.org/0000-0000-0000-0000"><i class="ai ai-orcid"></i></a>
+                        <a href="https://github.com/raickhr"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/shikhar-rai-91501676/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://scholar.google.com/citations?user=54YLcfMAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
+                        <a href="https://orcid.org/0000-0002-4448-3142"><i class="ai ai-orcid"></i></a>
                     </div>
 
-                    <a class="cv-button" href="your_cv.pdf" download>
+                    <a class="cv-button" href="shikharRai_CV.pdf" download>
                         <i class="fas fa-download"></i> Download CV
                     </a>
                 </div>
