--- a/blogs.html
+++ b/blogs.html
@@ -23,11 +23,93 @@
         </div>
     </nav>
 
+  <section class="slideshow-container">
+    <div class="slideshow-text">
+      <h2> Art Hobby</h2>
+      <p> During my free time, I like to sketch on my iPad, sometimes on paper or with water color. These are some of my artworks</p>
+    </div>
+    <div class="slideshow-section" onclick="nextSlide()">
+
+      <div class="slide fade">
+        <img src="images/sketches/Hussein.png" alt="Slide 1">
+        <div class="slide-caption">
+          <h3>Ph.D. Advisor</h3>
+          <p>Portrait of my Ph.D. advisor</p>
+        </div>
+      </div>
+
+      <div class="slide fade">
+        <img src="images/sketches/Samita.png" alt="Slide 2">
+        <div class="slide-caption">
+          <h3>Hiding Braces</h3>
+          <p>Drawn on Photoshop, with wacom tablet</p>
+        </div>
+      </div>
+
+      <div class="slide fade">
+        <img src="images/sketches/MomAndSon.png" alt="Slide 3">
+        <div class="slide-caption">
+          <h3>Mom and Son</h3>
+          <p>Watercolor on French cartridge paper</p>
+        </div>
+      </div>
+
+      <div class="slide fade">
+        <img src="images/sketches/HutByMountain.png" alt="Slide 3">
+        <div class="slide-caption">
+          <h3>Hut by the mountain</h3>
+          <p>Watercolor on French cartridge paper.</p>
+        </div>
+      </div>
+
+      <div class="slide fade">
+        <img src="images/sketches/Neelam.png" alt="Slide 3">
+        <div class="slide-caption">
+          <h3>तिमी</h3>
+          <p>Procreate App, Ipad</p>
+        </div>
+      </div>
+
+      <div class="slide fade">
+        <img src="images/sketches/Khalesi.png" alt="Slide 3">
+        <div class="slide-caption">
+          <h3>Khalesi</h3>
+          <p>Procreate App, Ipad.</p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Shikhar Rai. All rights reserved.</p>
-    </div>
-  </footer>
+      <div class="container">
+        <p>&copy; 2025 Shikhar Rai. All rights reserved.</p>
+      </div>
+    </footer>
+
+  <script>
+    let slideIndex = 0;
+    const slides = document.getElementsByClassName("slide");
+
+    function showSlide(n) {
+      for (let i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slides[n].style.display = "block";
+    }
+
+    function nextSlide() {
+      slideIndex = (slideIndex + 1) % slides.length;
+      showSlide(slideIndex);
+    }
+
+    // Auto slide every 5 seconds
+    setInterval(nextSlide, 5000);
+
+    // Initialize first slide
+    showSlide(slideIndex);
+  </script>
 </body>
 </html>
