--- a/blogs.html
+++ b/blogs.html
@@ -66,7 +66,7 @@
         <img src="images/sketches/Neelam.png" alt="Slide 3">
         <div class="slide-caption">
           <h3>तिमी</h3>
-          <p>Procreate App, Ipad</p>
+          <p>Procreate App, on iPad</p>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
         <img src="images/sketches/Khalesi.png" alt="Slide 3">
         <div class="slide-caption">
           <h3>Khalesi</h3>
-          <p>Procreate App, Ipad.</p>
+          <p>Procreate App, on iPad.</p>
         </div>
       </div>
 
