--- a/research.html
+++ b/research.html
@@ -23,6 +23,43 @@
         </div>
     </nav>
 
+    <div class="container">
+      <section class="video-highlight">
+        <div class="video-container">
+          <div class="video-thumbnail">
+            <iframe 
+              src="https://www.youtube.com/embed/_kTzyvy_CXo?si=5TjuIatpcSgH3kRc" 
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <div class="video-description">
+            <h3>Atmospheric Wind Energization of Ocean Weather</h3>
+            <p>This is a talk about our paper, <a href="https://doi.org/10.1038/s41467-025-56310-1" target="_blank">
+              Atmospheric wind energization of ocean weather</a> published in 2025 in Nature Communications</p>
+          </div>
+        </div>
+
+        <div class="video-container">
+          <div class="video-thumbnail">
+            <iframe 
+              src="https://www.youtube.com/embed/oO2bnW9pzfA?si=yF6grMPwaK5-yB_U" 
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <div class="video-description">
+            <h3>Disproportionate Role of Small-scale Winds on the Mesoscales and Spurious Eddy Killing</h3>
+            <p>The preprint for this talk is at 
+              <a href="https://d197for5662m48.cloudfront.net/documents/publicationstatus/126569/preprint_pdf/9067f8640f0309e96777ab647c91b116.pdf" target="_blank">
+              Scale-dependent Air-Sea Mechanical Coupling: Resolution Mismatch and Spurious Eddy-Killing</a></p>
+          </div>
+        </div>
+      </section>
+    </div>
+
 
   <footer>
     <div class="container">
