--- a/research.html
+++ b/research.html
@@ -25,6 +25,7 @@
 
     <div class="container">
       <section class="video-highlight">
+        <h2 class="video-highlight-title">Recorded Talks</h2>
         <div class="video-container">
           <div class="video-thumbnail">
             <iframe 
