--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
   <section class="slideshow-container">
     <div class="slideshow-text">
       <h2> Art Hobby</h2>
-      <p> During my free time, I like to sketch on my iPad, sometimes on paper or with water color. These are some of my artworks</p>
+      <p> During my free time, I like to sketch/paint on my iPad, sometimes on paper with water color or pencil. These are some of my artworks</p>
     </div>
     <div class="slideshow-section" onclick="nextSlide()">
 
