highlighed publication summary added

--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,20 @@
             <span class="pub-journal">Nature Communications</span>, 16(1), 1172. 
             <a href="https://doi.org/10.1038/s41467-025-56310-1" target="_blank">[DOI: 10.1038/s41467-025-56310-1]</a>
             </p>
+            <p> In this work, we show:
+              <ul>
+                <li> How to decompose mesoscale wind work to work on strain and work on vorticity, without using binary subjective Okubo-Weiss criterion.</li>
+                <li> On global average, like ocean mesoscale eddies, mesoscale strain are also damped by wind</li>
+                <li> Not all mesoscale eddies and strain are damped by wind, some are energized. 
+                  This depends on relative orientation of wind stress gradients with respect to ocean surface current gradients.</li>
+                <li> The gradients wind stress that arise due to ocean-current feedback always cause mesoscale motions to damp, but the wind stress gradients
+                   due to prevailing gradients in the winds 
+                     itself can cause both energization and damping.
+                </li>
+                <li> The effect of prevailing wind gradients on mesoscale wind work can be seen as anticyclonic eddies being energized and cyclonic eddies 
+                    being damped in the subtropcs away from regions with High KE like WBC and ACC. Similar wind-work pattern is seen in the straining motions </li>
+              </ul> 
+            </p>
           </div>
         </div>
 
@@ -54,6 +68,17 @@
             <a href="https://doi.org/10.1126/sciadv.abf4920" target="_blank"><h3>Scale of oceanic eddy killing by wind from global satellite observations</h3></a>
             <span class="pub-journal">Science Advances</span>, 7(28), eabf4920. 
             <a href="https://doi.org/10.1126/sciadv.abf4920" target="_blank">[DOI: 10.1126/sciadv.abf4920]</a>
+            </p>
+            <p> In this work, we show:
+              <ul>
+                <li> The critical lengthscale below which wind damps ocean eddies on global average is 260 km. 
+                  Oceanic motions of lengthscales larger than 260 km are energized by winds </li>
+                <li> The critical lengthscale is a fucntion of space, and is near spectral peak of ocean Kinetic Energy</li>
+                <li> The wind damping of ocean eddies peaks in winter with wind magnitude. </li>
+                <li> The damping of ocean eddies are concentrated in the highly energetic regions 
+                  and are of comparable magnitude to other energy pathways like inverse cascae, 
+                  baroclinic and barotropic conversion. </li>
+              </ul> 
             </p>
           </div>
         </div>
