--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,7 @@
               <ul>
                 <li> The critical lengthscale below which wind damps ocean eddies on global average is 260 km. 
                   Oceanic motions of lengthscales larger than 260 km are energized by winds </li>
-                <li> The critical lengthscale is a fucntion of space, and is near spectral peak of ocean Kinetic Energy</li>
+                <li> The critical lengthscale is a function of space, and is near spectral peak of ocean Kinetic Energy</li>
                 <li> The wind damping of ocean eddies peaks in winter with wind magnitude. </li>
                 <li> The damping of ocean eddies are concentrated in the highly energetic regions 
                   and are of comparable magnitude to other energy pathways like inverse cascae, 
